# Sadeem_Internship_Project

appdevelopment/: Makefile  pubspec.yaml
appdevelopment/ios/Runner.xcodeproj/: project.pbxproj
appdevelopment/lib/: app.dart  locator.dart  main.dart
appdevelopment/lib/core/constant/: api_routes.dart  app_colors.dart  asset_images.dart  constants.dart  (+4 more)
appdevelopment/lib/l10n/: intl_ar.arb
appdevelopment/lib/ui/: router.dart  router.gr.dart
backend/: .env  Makefile  air.toml  go.mod  go.sum  main.go
backend/controllers/: auth-controllers.go  device-controllers.go  items-controllers.go  tables-controllers.go  user-controllers.go  vendor-controllers.go
backend/database/migrations/: 000001_create_users_table.up.sql  000002_create_vendors_table.down.sql  000002_create_vendors_table.up.sql  000003_create_roles_table.up.sql  000004_create_user_roles_table.down.sql  000004_create_user_roles_table.up.sql  000005_create_vendor_admins_table.down.sql  000005_create_vendor_admins_table.up.sql  000006_create_tables_table.down.sql  000006_create_tables_table.up.sql  000007_create_items_table.up.sql
backend/middleware/: CORS_middleware.go  middleware.go
backend/models/: items.go  tables.go  user.go  vendor.go
backend/utils/: utils.go
embeddedsystem/: Cargo.toml  Makefile  diagram.json  wokwi.toml
embeddedsystem/src/: main.rs
frontend/: Makefile  package-lock.json  package.json
frontend/app/: digi.cjs  digi.ts
frontend/src/: App.css  App.jsx  Store.jsx  index.css  main.jsx  utils.jsx
frontend/src/components/: Product.jsx
frontend/src/screens/: HomeScreen.jsx  ProductScreen.jsx  SigninScreen.jsx  SignupScreen.jsx  UserListScreen.jsx  VendorCreateScreen.jsx  VendorEditScreen.jsx  VendorListScreen.jsx
(+85 files in other folders)
