[package]
name = "esp32-105"
version = "0.1.0"
authors = ["Doaa's Lap"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = [ "esp32" ] }
esp-println = { version = "0.11.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.8.0", features = ["embassy-net", "esp32", "phy-enable-usb", "utils", "wifi"] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
esp-hal-embassy = { version = "0.3.0", features = ["esp32", "integrated-timers"] }
embassy-time = "0.3.2"
embassy-executor = { version = "0.6.0", features = ["integrated-timers", "executor-thread", "task-arena-size-40960"] }
embassy-net = { version = "0.4.0", features = ["dhcpv4-hostname", "dns", "tcp"] }
static_cell = "2.1.0"
rust-mqtt = {version = "0.3.0", default_features = false}
embedded-nal-async = "0.7.1"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
